syntax = "proto3";

package greeter;
option go_package = "github.com/devpablocristo/golang/sdk/pb;pb";

service Greeter {
    rpc GreetUnary (GreetUnaryRequest) returns (GreetUnaryResponse);
    rpc GreetServerStreaming (GreetServerRequest) returns (stream GreetServerResponse);
    // rpc GreetClientStreaming (stream GreetClientRequest) returns (GreetClientResponse);
    // rpc GreetBidiStreaming (stream GreetBidiRequest) returns (stream GreetBidiResponse);
}

message Greeting {
    string first_name = 1; 
    string last_name = 2;
}

message GreetUnaryRequest {
    Greeting greeting = 1;
}

message GreetUnaryResponse {
    string result = 1;
}

message GreetServerRequest {
    Greeting greeting = 1;
}

message GreetServerResponse {
    string result = 1;
}


//  protoc --go_out=../pb --go-grpc_out=../pb --go_opt=module=github.com/devpablocristo/golang/sdk/pb --go-grpc_opt=module=github.com/devpablocristo/golang/sdk/pb greet.proto